--- a/TailwindCSS/Fundamentals/Container Spacing/index.html
+++ b/TailwindCSS/Fundamentals/Container Spacing/index.html
@@ -28,26 +28,34 @@
     <br>
 
     <!-- Arbitrary Spacing -->
-    div.m
-
-
+    <div class="m-[200px] bg-slate-300">2. Margin All around</div>
 
     <br>
     <hr>
     <br>
-
-
+  
     <!-- Padding  -->
+    <h3>3. Padding</h3>
+    <div class="p-2 bg-lime-200">3. Padding All Around</div>
+    <div class="pr-3 bg-red-200">3. Padding right</div>
+    <div class="pl-2 bg-green-200">3. Padding left</div>
+    <div class="pb-2 bg-blue-200">3. Padding  bottom </div>
+    <div class="pt-2 bg-cyan-200">3. Padding  top </div>
+    <div class="px-2 bg-yellow-300">3. Padding  x axis </div>
+    <div class="py-2 bg-orange-200">3. Padding  y axis </div>
 
-
-
-
-    <br>
     <hr>
+    <br>
     <br>
 
 
     <!-- Space Between X -->
+     <h2>Space Between x</h2>
+    <div class="flex space-x-4">
+      <div class="p-3 bg-teal-400">01</div>
+      <div class="p-3 bg-teal-500">02</div>
+      <div class="p-3 bg-teal-600">03</div>
+    </div>
 
     <br>
     <hr>
@@ -55,7 +63,12 @@
 
     <!-- Space Between Y -->
 
-
+     <h2>Space Between y</h2>
+    <div class="flex flex-col space-y-4">
+      <div class="p-3 bg-blue-400">01</div>
+      <div class="p-3 bg-blue-500">02</div>
+      <div class="p-3 bg-blue-600">03</div>
+    </div>
 
 
 
